--- a/requirements.txt
+++ b/requirements.txt
@@ -12,20 +12,27 @@ distro==1.9.0
 dnspython==2.6.1
 exceptiongroup==1.2.1
 fake-useragent==1.5.1
+frozendict==2.4.4
 google-cloud==0.34.0
 h11==0.14.0
+html5lib==1.1
 httpcore==1.0.5
 httpx==0.27.0
 idna==3.7
 importlib_metadata==7.1.0
 importlib_resources==6.4.0
 install==1.3.5
+lxml==5.2.2
 marshmallow==3.21.2
+multitasking==0.0.11
 mypy-extensions==1.0.0
+numpy==1.26.4
 onetimepass==1.0.1
 openai==1.30.3
 packaging==24.0
+pandas==2.2.2
 pathspec==0.12.1
+peewee==3.17.5
 platformdirs==4.2.2
 polars==0.20.27
 protobuf==5.26.1
@@ -34,6 +41,7 @@ pydantic_core==2.18.2
 pymongo==4.7.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2024.1
 ratelimiter==1.2.0
 requests==2.32.2
 six==1.16.0
@@ -44,6 +52,9 @@ tqdm==4.62.3
 typeguard==4.2.1
 typing-inspect==0.9.0
 typing_extensions==4.11.0
+tzdata==2024.1
 urllib3==1.26.18
+webencodings==0.5.1
 wrapt==1.16.0
+yfinance==0.2.40
 zipp==3.18.2
